"""Data quality metrics for system chain entry"""
type DataQuality {
  """Data completeness score (0-1)"""
  completenessScore: Float

  """List of validation errors"""
  validationErrors: [String]

  """Last validation timestamp"""
  lastValidated: DateTime
}

"""Entry in the system chain showing data flow"""
type SystemChainEntry {
  systemName: SystemType!

  """Record ID in the source system"""
  recordId: String!

  """When this record was processed"""
  processedDate: DateTime!

  """Rules applied during transformation"""
  transformationRules: [String]
  dataQuality: DataQuality
}

"""Metadata supporting multiple nested systems"""
type SystemMetadata {
  """Primary source system"""
  primarySystem: SystemType!

  """Chain of systems data has flowed through"""
  systemChain: [SystemChainEntry]!

  """Schema version"""
  schemaVersion: String!

  """Last modification timestamp"""
  lastModified: DateTime!

  """Global unique identifier across all systems"""
  globalRecordId: String!
}

"""Contract identification information"""
type ContractIdentification {
  """Procurement Instrument Identifier"""
  piid: String!

  """Original Award PIID (Preceding Reference Info)"""
  originalAwardPiid: String

  """Referenced PIID for related contracts"""
  referencedPiid: String

  """Title or description of the contract"""
  contractTitle: String

  """Type of contract instrument"""
  contractType: String

  """Detailed description of contract requirements"""
  descriptionOfRequirement: String
}

"""Agency or department information"""
type AgencyInfo {
  """Agency or Department Code"""
  code: String

  """Agency or Department Name"""
  name: String
}

"""Organization information for contracts"""
type OrganizationInfo {
  """Contracting agency information"""
  contractingAgency: String!

  """Contracting department information"""
  contractingDepartment: AgencyInfo

  """Funding agency information"""
  fundingAgency: AgencyInfo

  """Funding department information"""
  fundingDepartment: AgencyInfo
}

"""Vendor information"""
type VendorInfo {
  """Name of the vendor providing goods/services"""
  vendorName: String

  """Vendor Unique Entity Identifier"""
  vendorUei: String
}

"""Place of performance location details"""
type PlaceOfPerformance {
  """Street address"""
  streetAddress: String

  """City"""
  city: String

  """County"""
  county: String

  """State code"""
  state: String

  """ZIP code"""
  zip: String

  """Country code"""
  country: String

  """Congressional district"""
  congressionalDistrict: String
}

"""Financial information and values"""
type FinancialInfo {
  """Total contract value including all modifications"""
  totalContractValue: Decimal

  """Base contract value plus all option periods"""
  baseAndAllOptionsValue: Decimal

  """IGE amount"""
  independentGovernmentEstimate: Decimal

  """Amount spent on specific products"""
  amountSpentOnProduct: Decimal

  """Fiscal year when contract was awarded"""
  contractFiscalYear: String
}

"""Business classification codes and categories"""
type BusinessClassification {
  """NAICS classification code"""
  naicsCode: String

  """NAICS description"""
  naicsDescription: String

  """Product Service Code"""
  pscCode: String

  """Product Service Code Description"""
  pscDescription: String

  """General category under which the product falls"""
  categoryOfProduct: String

  """Specific type of product being contracted"""
  typeOfProduct: String

  """Type of set-aside program"""
  setAsideType: String

  """Local area set-aside flag"""
  localAreaSetAside: Boolean

  """Contracting Officer size determination"""
  coSizeDetermination: String
}

"""Contract characteristics and flags"""
type ContractCharacteristics {
  """Emergency acquisition indicator"""
  emergencyAcquisition: String

  """Government furnished property flag"""
  governmentFurnishedProperty: Boolean

  """Includes Controlled Unclassified Information"""
  includesCui: Boolean

  """Recurring service flag"""
  recurringService: Boolean

  """Recurring utilities flag"""
  recurringUtilities: Boolean
}

"""Contact information for contract personnel"""
type Contact {
  """Contact name"""
  name: String

  """Contact title"""
  title: String

  """Contact email address"""
  email: Email

  """Contact phone number"""
  phone: String
  role: ContactRole
}

"""Contract status information"""
type StatusInfo {
  """Active contract flag"""
  isActive: Boolean

  """Latest version flag"""
  isLatest: Boolean

  """Funded contract flag"""
  isFunded: Boolean
  status: ContractStatus

  """Date contract was published"""
  publishedDate: DateTime

  """Last modification date"""
  lastModifiedDate: DateTime

  """Date when contract was completed"""
  contractCompleteDate: Date

  """Date when last Contract Action Report was signed"""
  lastCarDateSigned: Date
}

"""Fields common across all systems"""
type CommonElements {
  contractIdentification: ContractIdentification!
  organizationInfo: OrganizationInfo!
  vendorInfo: VendorInfo
  placeOfPerformance: PlaceOfPerformance
  financialInfo: FinancialInfo
  businessClassification: BusinessClassification
  contractCharacteristics: ContractCharacteristics

  """Contract contacts"""
  contacts: [Contact]
  statusInfo: StatusInfo!
}

"""Contract Data legacy_procurementance type information"""
type Contract DataAssistanceType {
  """Assistance type code"""
  code: String

  """Assistance type value"""
  value: String

  """Assistance level"""
  level: Int
}

"""Contract Data applicant or beneficiary type"""
type Contract DataApplicantBeneficiaryType {
  """Type value"""
  value: String

  """Type code"""
  code: String
}

"""Contract Data eligibility information"""
type Contract DataEligibility {
  """Eligible applicant types"""
  applicantTypes: [Contract DataApplicantBeneficiaryType]

  """Eligible beneficiary types"""
  beneficiaryTypes: [Contract DataApplicantBeneficiaryType]

  """Additional eligibility information"""
  additionalInfo: String
}

"""Contract Data usage information"""
type Contract DataUsage {
  """Usage rules"""
  rules: String

  """Usage restrictions"""
  restrictions: String

  """Loan terms"""
  loanTerms: String

  """Discretionary fund information"""
  discretionaryFund: String
}

"""Contract Data-specific data fields"""
type Contract DataSpecificData {
  """Contract Data program number"""
  programNumber: String

  """Alternative program names"""
  alternativeNames: [String]

  """Program objective"""
  objective: String

  """Program website"""
  website: URI

  """Assistance types"""
  legacy_procurementanceTypes: [Contract DataAssistanceType]
  eligibility: Contract DataEligibility
  usage: Contract DataUsage
}

"""Contract Data-specific field extension"""
type Contract DataExtension {
  """Field name"""
  fieldName: String

  """Field type"""
  fieldType: String

  """Field value"""
  value: JSON
  contract_dataSpecific: Contract DataSpecificData
}

"""Legacy Procurement acquisition data"""
type AssistAcquisitionData {
  """IA PIID or user-generated unique ID for the Interagency Agreement"""
  iaPiidOrUniqueId: String!

  """
  Nature of Acquisition or Relationship between GSA and Requesting Agency
  """
  natureOfAcquisition: String!
}

"""Legacy Procurement office address"""
type AssistOfficeAddress {
  """Street address"""
  streetAddress1: String

  """City"""
  city: String

  """State"""
  state: String
}

"""Legacy Procurement client data"""
type AssistClientData {
  """Client organization name"""
  clientOrganizationName: String!
  officeAddress: AssistOfficeAddress!
}

"""Legacy Procurement award data"""
type AssistAwardData {
  """Type of IDC"""
  typeOfIdc: String

  """Who can use IDC"""
  whoCanUseIdc: String
}

"""Legacy Procurement-specific data fields"""
type AssistSpecificData {
  acquisitionData: AssistAcquisitionData
  clientData: AssistClientData
  awardData: AssistAwardData
}

"""Legacy Procurement-specific field extension"""
type AssistExtension {
  """Field name"""
  fieldName: String

  """Field type"""
  fieldType: String

  """Field value"""
  value: JSON
  legacy_procurementSpecific: AssistSpecificData
}

"""EASi-specific data fields"""
type EasiSpecificData {
  """EASi Business Owner"""
  businessOwner: String

  """EASi System Owner"""
  systemOwner: String

  """Unit Price field available at the CLIN level"""
  unitPrice: Decimal

  """Unit of Measure field available at the CLIN level"""
  unitOfMeasure: String

  """Option Period or Not Applicable"""
  optional: String

  """Not to Exceed field"""
  notToExceed: String

  """Maps to Qualifier field at CLIN level"""
  notSeparatelyPriced: String
}

"""EASi-specific field extension"""
type EasiExtension {
  """Field name"""
  fieldName: String

  """Field type"""
  fieldType: String

  """Field value"""
  value: JSON
  intake_processSpecific: EasiSpecificData
}

"""System-specific fields and extensions"""
type SystemExtensions {
  """Contract Data-specific fields and extensions"""
  contract_data: [Contract DataExtension]

  """Legacy Procurement-specific fields and extensions"""
  legacy_procurement: [AssistExtension]

  """EASi-specific fields and extensions"""
  intake_process: [EasiExtension]
}

"""
Unified schema for Contract Data, Legacy Procurement, and EASi systems with common elements and system-specific extensions, enhanced with procurement lifecycle and organizational structure
"""
type Contract {
  """Alias for globalRecordId for GraphQL Node interface"""
  id: String
  systemMetadata: SystemMetadata!
  commonElements: CommonElements!
  systemExtensions: SystemExtensions

  """Related contracts via referencedPiid"""
  relatedContracts: String
}

"""Federal contracting system type"""
enum SystemType {
  """Federal Procurement Data System - Next Generation"""
  Contract Data

  """Award System for Streamlined IT Transactions"""
  Legacy Procurement

  """Enterprise Acquisition System for Infrastructure"""
  Intake Process

  """Contract Award Lifecycle Management"""
  Logistics Mgmt
}

"""Role classification for contract personnel"""
enum ContactRole {
  """Primary contact for the contract"""
  PRIMARY

  """Technical point of contact"""
  TECHNICAL

  """Administrative contact"""
  ADMINISTRATIVE

  """Government contracting officer"""
  CONTRACTING_OFFICER
}

"""Current status in the contract lifecycle"""
enum ContractStatus {
  """Contract in draft state"""
  DRAFT

  """Contract published for bidding"""
  PUBLISHED

  """Contract awarded to vendor"""
  AWARDED

  """Contract completed"""
  COMPLETED

  """Contract cancelled"""
  CANCELLED
}

"""ISO 8601 date-time string (YYYY-MM-DDTHH:mm:ss.sssZ)"""
scalar DateTime

"""ISO 8601 date string (YYYY-MM-DD)"""
scalar Date

"""High-precision decimal number for currency and financial values"""
scalar Decimal

"""Arbitrary JSON value"""
scalar JSON

"""Valid email address"""
scalar Email

"""Valid URI/URL"""
scalar URI

"""Union of all system-specific extensions"""
union SystemExtension = Contract DataExtension | AssistExtension | EasiExtension

"""Root query type"""
type Query {
  """Fetch a single contract by global ID"""
  contract: Contract

  """Fetch a contract by PIID"""
  contractByPiid: Contract

  """Paginated list of contracts with filtering"""
  contracts: String

  """Full-text search for contracts"""
  searchContracts: String
}

"""Root mutation type"""
type Mutation {
  """Trigger data ingestion from external system"""
  triggerDataIngestion: Boolean
}